# branch_diff

./: README.md  pyproject.toml
branch_diff/: __init__.py  __main__.py  branchdiff.py
tests/: test_branch_diff.py
